some backend auth optimizations